Change for ESPER-572 Short-circuit evaluation not always performed for filters
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements430@2514 d91eb1b3-1215-0410-9718-d41490442091